Fix the OS X build

--- a/yara.opam
+++ b/yara.opam
@@ -28,6 +28,6 @@ depexts: [
 	[["fedora"] ["yara-devel"]]
 	[["archlinux"] ["yara"]]
 	[["gentoo"] ["yara"]]
-	[["darwin" "homebrew"] ["yara"]]
+	[["osx" "homebrew"] ["yara"]]
 ]
 available: [ocaml-version >= "4.02.3"]
