--- a/yara.opam
+++ b/yara.opam
@@ -9,11 +9,11 @@ bug-reports: "https://github.com/XVilka/yara-ocaml/issues"
 license: "MIT"
 dev-repo: "https://github.com/XVilka/yara-ocaml.git"
 build: [
-	["jbuilder" "subst" "-n" name] {pinned}
-	["jbuilder" "build" "-p" name "-j" jobs]
+	["dune" "subst"] {pinned}
+	["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-	"jbuilder" {build}
+	"dune" {build & >= "1.0"}
 	"ocaml-migrate-parsetree" {build}
 	"ppx_deriving" {>= "4.2.0"}
 	"core" {>= "v0.9.0"}
