--- a/yara.opam
+++ b/yara.opam
@@ -1,33 +1,36 @@
-# -*- conf -*-
-opam-version: "1.2"
+opam-version: "2.0"
 name: "yara"
-version: "0.1"
+version: "0.2"
 maintainer: "Anton Kochkov <anton.kochkov@gmail.com>"
-author: "Anton Kochkov <anton.kochkov@gmail.com>"
 homepage: "https://github.com/XVilka/yara-ocaml"
 bug-reports: "https://github.com/XVilka/yara-ocaml/issues"
 license: "MIT"
-dev-repo: "https://github.com/XVilka/yara-ocaml.git"
+dev-repo: "git+https://github.com/XVilka/yara-ocaml.git"
 build: [
-	["dune" "subst"] {pinned}
+	["dune" "subst" "-p" name] {pinned}
 	["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-	"dune" {build & >= "1.0"}
-	"ocaml-migrate-parsetree" {build}
-	"ppx_deriving" {>= "4.2.0"}
-	"core" {>= "v0.9.0"}
-	"ctypes" {>= "0.13.0"}
-	"ctypes-foreign"
+  "ocaml" {>= "4.02.3"}
+  "dune"
+  "ocaml-migrate-parsetree" {build}
+  "ppx_deriving" {>= "4.2.0"}
+  "core" {>= "v0.9.0" & < "v0.14"}
+  "ctypes" {>= "0.13.0"}
+  "ctypes-foreign"
 ]
 depexts: [
-	[["debian"] ["libyara-dev"]]
-	[["alpine"] ["libyara-dev"]]
-	[["ubuntu"] ["libyara-dev"]]
-	[["centos"] ["epel-release" "yara-devel"]]
-	[["fedora"] ["yara-devel"]]
-	[["archlinux"] ["yara"]]
-	[["gentoo"] ["yara"]]
-	[["osx" "homebrew"] ["yara"]]
+  ["libyara-dev"] {os-family = "debian"}
+  ["libyara-dev"] {os-distribution = "alpine"}
+  ["epel-release" "yara-devel"] {os-distribution = "centos"}
+  ["yara-devel"] {os-distribution = "fedora"}
+  ["yara"] {os-distribution = "arch"}
+  ["yara"] {os-distribution = "gentoo"}
+  ["yara"] {os = "macos" & os-distribution = "homebrew"}
 ]
-available: [ocaml-version >= "4.02.3"]
+synopsis: "OCaml bindings for YARA matching engine"
+description: """
+Provides a Ctypes bindings for
+YARA matching engine"""
+authors: "Anton Kochkov <anton.kochkov@gmail.com>"
+
