--- a/yara.opam
+++ b/yara.opam
@@ -18,9 +18,9 @@ depends: [
 ]
 depexts: [
   ["libyara-dev"] {os-family = "debian"}
-  ["libyara-dev"] {os-distribution = "alpine"}
   ["epel-release" "yara-devel"] {os-distribution = "centos"}
   ["yara-devel"] {os-distribution = "fedora"}
+  ["yara"] {os-distribution = "alpine"}
   ["yara"] {os-distribution = "arch"}
   ["yara"] {os-distribution = "gentoo"}
   ["yara"] {os = "macos" & os-distribution = "homebrew"}
